@@ -319,7 +319,7 @@ size_t ICACHE_FLASH_ATTR rest_net_names_get_handler(struct http_request *request
 		request->response.state = HTTP_STATE_ASSEMBLED;
 		
 		request->response.message_size = ((struct rest_net_names_context *)request->response.context)->size;
-		debug(" Response size: %d.\n", request->response.message_size);
+		debug(" Response size: %l.\n", request->response.message_size);
 	}
 	return(ret);
 }
